# ynab-mcp

./: .gitignore  README.md  pyproject.toml  ynab_mcp.py
